objects/MIDNewProductURL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Adding new product in MID Product Listing VF page uses a URL which requires field IDs to refer to fields for passing values in URL</description>
    <fields>
        <fullName>MachineModelcFieldID__c</fullName>
        <label>MachineModelcFieldID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object3LetterPrefix__c</fullName>
        <label>Object3LetterPrefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubsystemFieldID__c</fullName>
        <label>SubsystemFieldID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MIDNewProductURL</label>
</CustomObject>